--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,7 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
-- script: cat file1
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: 'cat file1'
